--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
-    "web-vitals": "^2.0.1"
+    "web-vitals": "^2.0.1",
+    "web3": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
